--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^3.0.48",
     "antd": "^5.3.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
